# plane

./: CMakeLists.txt  main.cpp  pasazerowie.cpp  pasazerowie.h  samolot.cpp  samolot.h
